--- a/index/src/main/res/values/strings.xml
+++ b/index/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">index</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="index_app_index">首页</string>
+    <string name="index_app_other">其他</string>
+    <string name="index_app_mine">我的</string>
 </resources>
