--- a/basemvp/src/main/res/values/strings.xml
+++ b/basemvp/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">basemvp</string>
     <string name="common_name">Common</string>
     <string name="widget_name">Widget</string>
+    <string name="business_net_error">网络有问题</string>
+    <string name="business_busy">服务器繁忙</string>
+    <string name="business_unknown">未知错误</string>
+    <string name="business_https">证书错误</string>
 </resources>
